--- a/lab02/quy-lab02.html
+++ b/lab02/quy-lab02.html
@@ -8,14 +8,14 @@
 
 <body>
 
-    <h1> Estella Quy's Biography </h1>
+    <h1> <strong> Estella Quy's Biography </strong> </h1>
 <p>  
-     Hi, my name is Estella <strong> (I usually go by Stella) </strong> and I am an innovation society and technology major with a concentration in information security and a minor in psychology. I am incredibly interested in how technology and data can make life more accessible for all people.  
+     Hi, my name is Estella Quy <strong> (I usually go by Stella) </strong> and I am an innovation society and technology major with a concentration in information security and a minor in psychology. I am incredibly interested in how technology and data can make life more accessible for all people.  
 </p>
   
-<h2> Estella Quy's Work experience/ work experience </h2>
+<h2> <strong> Estella Quy's Work experience </strong> </h2>
 
-<p>  Accomplishments:
+<p>
     Leadership intern apart of the team that piloted and launched the SUITE (information management and technology experience at the mary ann shaw center for public and community service) 
     Digital retail and data analytics intern at romer skincare responsible for all social media efforts from may 2021 - august 2022 
 </p>
