--- a/lab02/quy-lab02.html
+++ b/lab02/quy-lab02.html
@@ -20,7 +20,7 @@
     Digital retail and data analytics intern at romer skincare responsible for all social media efforts from may 2021 - august 2022 
 </p>
 
-<h3> Personal Life </h3>
+<h3> <strong> Estella Quy's Personal Life </strong> </h3>
    
 <p> Outside of work I love Greys Anatomy, animals and dog walking!  
 
