--- a/lab02/quy-lab02.html
+++ b/lab02/quy-lab02.html
@@ -16,13 +16,31 @@
 <h2> <strong> Estella Quy's Work experience </strong> </h2>
 
 <p>
-    Leadership intern apart of the team that piloted and launched the SUITE (information management and technology experience at the mary ann shaw center for public and community service) 
-    Digital retail and data analytics intern at romer skincare responsible for all social media efforts from may 2021 - august 2022 
+    Working to develop and pilot an IT immersion program for students in the Syracuse City School District (Syracuse University Information Technology Experience).
+
+- Fostering a reciprocal campus-community relationship with the surrounding areas of the University.
+- Developing lesson plans for classes twice a week to inspire students to get involved in technology.
+- Collaborating with professional staff to develop a mission statement for the SUITE Initiative.
+   
+Additionally, 
+At Romer Skincare I worked along side the CEO and owner, Lauren Rome, to scout opportunities for Romer such as potential online and in person distributers and brick and mortar store fronts.
+
+After having my internship extended from just the summer to the 2021-2022 school year I transitioned into being a part of the social media team to create and curate content for both the 
+Romer Skincare social accounts as well as help with other branding deals to grow the brand awareness. To do this I, along with my colleges, had access to, and ran the social media accounts
+ such as instagram and Tik Tok. We created content and engaged with other accounts. 
+
+ In addition I love animals and worked at a dog day care. During my time at Hi-BK pet care and spa, I worked with my colleges to promote safety, cleanliness, and sanitation for upwards of 40 dogs every work day. In order to engage in my job properly I needed to be able to do the following:
+ -Properly attend to both frustrating and happy customers with customer service and interpersonal Skills
+ -Have an affection for animals that went far being the daily difficulties and struggles
+ -Have an attention to detail in order to be on top of catching potential aggression and stop fights before they stared. 
+ -Have an attention to detail for cleaning up dog vomit, and other substances efficiently and in a time effective way while also being thorough for the safety of all dogs and especially puppies under the vaccination age. 
+ -The ability to take initiative and be proactive in sometimes scary or dangerous situations
+
 </p>
 
 <h2> <strong> Estella Quy's Personal Life </strong> </h2>
    
-<p> Outside of work I love Greys Anatomy, animals and dog walking!  
+<p> Outside of work I love Greys Anatomy, animals and dog walking! I am apart of the service dogs at SU club and am in the Delta Phi Epsilon Social Sorority on campus. 
 
 </p>
     
