--- a/lab02/quy-lab02.html
+++ b/lab02/quy-lab02.html
@@ -45,6 +45,9 @@ Romer Skincare social accounts as well as help with other branding deals to grow
 </p>
     
 <hr>
+
+&copy; 2020 
+
 </body>
 
 </html>
