--- a/lab02/quy-lab02.html
+++ b/lab02/quy-lab02.html
@@ -29,12 +29,16 @@ After having my internship extended from just the summer to the 2021-2022 school
 Romer Skincare social accounts as well as help with other branding deals to grow the brand awareness. To do this I, along with my colleges, had access to, and ran the social media accounts
  such as instagram and Tik Tok. We created content and engaged with other accounts. 
 
- In addition I love animals and worked at a dog day care. During my time at Hi-BK pet care and spa, I worked with my colleges to promote safety, cleanliness, and sanitation for upwards of 40 dogs every work day. In order to engage in my job properly I needed to be able to do the following:
- -Properly attend to both frustrating and happy customers with customer service and interpersonal Skills
- -Have an affection for animals that went far being the daily difficulties and struggles
- -Have an attention to detail in order to be on top of catching potential aggression and stop fights before they stared. 
- -Have an attention to detail for cleaning up dog vomit, and other substances efficiently and in a time effective way while also being thorough for the safety of all dogs and especially puppies under the vaccination age. 
- -The ability to take initiative and be proactive in sometimes scary or dangerous situations
+ In addition I love animals and worked at a dog day care. During my time at Hi-BK pet care and spa, I worked with my colleges to promote safety, cleanliness, and sanitation for upwards of 40 dogs every work day. 
+ In order to engage in my job properly I needed to be able to do the following:
+ <ul>
+    <li>Have an affection for animals that went far being the daily difficulties and struggles</li>
+    <li>Have an attention to detail in order to be on top of catching potential aggression and stop fights before they stared.  </li>
+    <li>Have an attention to detail for cleaning up dog vomit, and other substances efficiently and in a time effective way while also being thorough for the safety of all dogs and especially puppies under the vaccination age.</li>
+    <li>Have an attention to detail in order to be on top of catching potential aggression and stop fights before they stared. </li>
+    <li>Have an attention to detail for cleaning up dog vomit, and other substances efficiently and in a time effective way while also being thorough for the safety of all dogs and especially puppies under the vaccination age. </li>
+    <li>The ability to take initiative and be proactive in sometimes scary or dangerous situations</li>
+ </ul>Properly attend to both frustrating and happy customers with customer service and interpersonal Skills
 
 </p>
 
