--- a/lab02/quy-lab02.html
+++ b/lab02/quy-lab02.html
@@ -38,8 +38,8 @@ Romer Skincare social accounts as well as help with other branding deals to grow
     <li>Have an attention to detail in order to be on top of catching potential aggression and stop fights before they stared. </li>
     <li>Have an attention to detail for cleaning up dog vomit, and other substances efficiently and in a time effective way while also being thorough for the safety of all dogs and especially puppies under the vaccination age. </li>
     <li>The ability to take initiative and be proactive in sometimes scary or dangerous situations</li>
- </ul>Properly attend to both frustrating and happy customers with customer service and interpersonal Skills
-
+    <li> Properly attend to both frustrating and happy customers with customer service and interpersonal Skills </li>
+ </ul>
 </p>
 
 <h2> <strong> Estella Quy's Personal Life </strong> </h2>
