--- a/lab02/quy-lab02.html
+++ b/lab02/quy-lab02.html
@@ -17,20 +17,33 @@
 
 <p>
     Working to develop and pilot an IT immersion program for students in the Syracuse City School District (Syracuse University Information Technology Experience).
+</p>
 
-- Fostering a reciprocal campus-community relationship with the surrounding areas of the University.
-- Developing lesson plans for classes twice a week to inspire students to get involved in technology.
-- Collaborating with professional staff to develop a mission statement for the SUITE Initiative.
+<ul> 
+    <li> Fostering a reciprocal campus-community relationship with the surrounding areas of the University. 
+    </li>
+    <li> Developing lesson plans for classes twice a week to inspire students to get involved in technology.
+    </li>
+    <li> Collaborating with professional staff to develop a mission statement for the SUITE Initiative.
+    </li>
+</ul>
    
-Additionally, 
-At Romer Skincare I worked along side the CEO and owner, Lauren Rome, to scout opportunities for Romer such as potential online and in person distributers and brick and mortar store fronts.
+<p> Additionally, 
+    At Romer Skincare I worked along side the CEO and owner, Lauren Rome, to scout opportunities for Romer such as potential online and in person distributers and brick and mortar store fronts.
+</p>
 
-After having my internship extended from just the summer to the 2021-2022 school year I transitioned into being a part of the social media team to create and curate content for both the 
-Romer Skincare social accounts as well as help with other branding deals to grow the brand awareness. To do this I, along with my colleges, had access to, and ran the social media accounts
- such as instagram and Tik Tok. We created content and engaged with other accounts. 
+<p>
+    After having my internship extended from just the summer to the 2021-2022 school year I transitioned into being a part of the social media team to create and curate content for both the 
+    Romer Skincare social accounts as well as help with other branding deals to grow the brand awareness. To do this I, along with my colleges, had access to, and ran the social media accounts such as instagram and Tik Tok. We created content and engaged with other accounts. 
+</p>
 
- In addition I love animals and worked at a dog day care. During my time at Hi-BK pet care and spa, I worked with my colleges to promote safety, cleanliness, and sanitation for upwards of 40 dogs every work day. 
- In order to engage in my job properly I needed to be able to do the following:
+<p> 
+In addition I love animals and worked at a dog day care. During my time at Hi-BK pet care and spa, I worked with my colleges to promote safety, cleanliness, and sanitation for upwards of 40 dogs every work day.
+</p>
+  
+ <h2> In order to engage in my job properly I needed to be able to do the following:
+ </h2>
+ 
  <ul>
     <li>Have an affection for animals that went far being the daily difficulties and struggles</li>
     <li>Have an attention to detail in order to be on top of catching potential aggression and stop fights before they stared.  </li>
@@ -44,7 +57,8 @@ Romer Skincare social accounts as well as help with other branding deals to grow
 
 <h2> <strong> Estella Quy's Personal Life </strong> </h2>
    
-<p> Outside of work I love Greys Anatomy, animals and dog walking! I am apart of the service dogs at SU club and am in the Delta Phi Epsilon Social Sorority on campus. 
+<p> 
+    Outside of work I love Greys Anatomy, animals and dog walking! I am apart of the service dogs at SU club and am in the Delta Phi Epsilon Social Sorority on campus. 
 
 </p>
     
