--- a/lab02/quy-lab02.html
+++ b/lab02/quy-lab02.html
@@ -41,8 +41,7 @@
 In addition I love animals and worked at a dog day care. During my time at Hi-BK pet care and spa, I worked with my colleges to promote safety, cleanliness, and sanitation for upwards of 40 dogs every work day.
 </p>
   
- <h3> In order to engage in my job properly I needed to be able to do the following:
- </h3>
+<p> In order to engage in my job properly I needed to be able to do the following: </p> 
 
  <ul>
     <li>Have an affection for animals that went far being the daily difficulties and struggles</li>
