--- a/unit3notes/unit3notes.html
+++ b/unit3notes/unit3notes.html
@@ -17,6 +17,10 @@
             <p>Within the web page - part 1/2</p>
             <a href="#topofpage"> go to top</a>
         <h2>Images</h2>
+        <img> 
+    
+    </body>
+
         <h2>Embedding</h2>
     </body>
 </html>
