--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -7,10 +7,11 @@
 </head>
 
 <body>
-<h2>Address</h2>
+<h2> Estella Quy Contact Information </h2>
+<h3> Address</h3>
 <p> 404 University Ave, Syracuse, NY </p>
-<p>LinkedIn Profile</p>
-<a href="linkedin.com/in/estella-quy-94450a1b6" target="_blank">Estella Quy LinkedIn</a>
+<h3>LinkedIn Profile</h3>
+<a>href="linkenin.com/in/estella-quy-94450a1b6" target="_blank" LinkedIn </a>
 </body>
 
 </html>
