--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -11,7 +11,7 @@
 <h3> Address</h3>
 <p> 404 University Ave, Syracuse, NY </p>
 <h3>LinkedIn Profile</h3>
-<a href="linkedin.com/in/estella-quy-94450a1b6" target="_blank">Linkedin</a>
+<a href="https://www.linkedin.com/in/estella-quy-94450a1b6" target="_blank">Linkedin</a>
 </body>
 
 </html>
