--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -11,8 +11,8 @@
     <h2> Estella - Address</h2>
     <p> 404 University Ave, Syracuse, NY 13210 </p>
     <h2>Estella - LinkedIn Profile</h2>
-    <a href="https://www.linkedin.com/in/estella-quy-94450a1b6" target="_blank">LinkedIn</a>
     <a href="https://www.linkedin.com/in/estella-quy-94450a1b6"></a> <img src="../images/LI-Logo.svg.original.svg" alt="linkedinlogo">
+    <a href="https://www.linkedin.com/in/estella-quy-94450a1b6" target="_blank">Click Here to go to my LinkedIn Page</a>
     <h2> Estella - Email </h2>
     <a href="mailto:equy01@syr.edu"> Estella Quy Email</a>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2915.765747954593!2d-76.13689228450575!3d43.046359979146835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f3a721b158ab%3A0x3d68244594f4f5de!2s404%20University%20Ave%2C%20Syracuse%2C%20NY%2013210!5e0!3m2!1sen!2sus!4v1675651776711!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
