--- a/unit4notes.html
+++ b/unit4notes.html
@@ -10,6 +10,7 @@
         <h1>Tables and Forms! </h1>
         <h2>Tables</h2>
         <table>
+            <caption> World Population</caption>
             <tr>
                 <th>Country</th>
                 <th>Population</th>
@@ -28,6 +29,15 @@
         </table>
 
         <h2>Forms</h2>
+        <!--action -page that processes form 
+            method -how data is sent (in url or on header)
+        -->
+        <form action="" method="post">
+            <p>This form is going to be for takeour orders.</p>
+            <label for="">Full Name:</label>
+            <input type="text" id="fullname" name>
+
+        </form>
         
     </body>
 </html>
