--- a/unit4notes.html
+++ b/unit4notes.html
@@ -46,6 +46,7 @@
             <input type="radio" id="delivery" name="pickupdelivery" value="delivery">
             <label for="delivery">delivery</label>
         <br>
+        <input type="checkbox" id="extrasauce" name="extrasauce" value="yes">
         <input type="submit" value="place order"
         </form>
         
