--- a/lab04/quy-lab04.html
+++ b/lab04/quy-lab04.html
@@ -6,53 +6,73 @@
             td, th {border: 1px solid black}
          </style>   
     </head>
+    <h2>Skills Table</h2>
     <body>
         <table>
         <caption>Estella Quy Skills</caption>
+
+        <table>
             <tr>
               <th>Category</th>
-              <th>Skill</th> 
+              <th>Skill</th>
               <th>Competency</th>
             </tr>
             <tr>
               <td>Coding</td>
-              <td>Coding</td> 
-              <td>Software</td>
-              <td>Team Leadership</td>  
-              <td>Project Managment</td>
-              <td>Software</td>
-              <td>Category</td>
-              <td>Category</td>
-              <td>Category</td>
-              <td>Category</td>
+              <td>Python</td>
+              <td>Proficient</td>
             </tr>
             <tr>
-                <td>HTML</td>
-                <td>Python</td> 
-                <td>Excel, Word, Powerpoint, Teams etc.</td>
-                <td>Leading and working in a team </td>
-                <td>Skill</td>
-                <td>Filemaker</td>
-                <td>Skill</td>
-                <td>Skill</td>
-                <td>Skill</td>
-                <td>Skill</td>
-              </tr>
-            <tr>
+              <td> Coding </td>
+              <td> HTML</td>
               <td>Proficient</td>
-              <td>Proficient</td> 
-              <td>Proficent</td>
+            </tr>
+            <tr>
+              <td>Software</td>
+              <td> Microsoft Office</td>
               <td>Expert</td>
-              <td>Proficient</td>
-              <td>Competency</td>
-              <td>Competency</td>
-              <td>Competency</td>
-              <td>Competency</td>
-              <td>Competency</td>
             </tr>
-          </table>       
+            <tr>
+              <td>Software</td>
+              <td> Filemaker</td>
+              <td> Proficent</td>
+            </tr>
+            <tr>
+              <td>People Skills</td>
+              <td> Team Leadership</td>
+              <td>Expert</td>
+            </tr>
+            <tr>
+              <td>People Skills</td>
+              <td>Project Managment</td>
+              <td>Proficient</td>
+            </tr>
 
+            <tr>
+                <td> Communication Skills</td>
+                <td> Presentation</td>
+                <td> Expert </td>
+              </tr>
 
+            <tr>
+                <td> Coding </td>
+                <td> SQL</td>
+                <td> Proficent </td>
+              </tr>
+            
+            <tr>
+                <td> Software </td>
+                <td> Wireshark</td>
+                <td> Proficent </td>
+              </tr>
 
-    </body>
-    </html>
+            <tr>
+                <td> Communication Skills </td>
+                <td> Professional Communication</td>
+                <td> Expert </td>
+              </tr>
+          </table>
+          
+          </body>
+          </html>
+
