--- a/lab08/index.html
+++ b/lab08/index.html
@@ -4,8 +4,10 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport"
+    content="width=device-width, initial-scale=1">
     <title>quy-bio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style copy.css">
 </head>
 
 
@@ -17,7 +19,11 @@
     </nav>
 
     <h1> <strong> Estella Quy </strong> </h1>
-    <header><img src="../images/bio-banner.png"></header>
+    <img src="../images/1649267231245.jpeg" alt="bio-banner" class="bio"
+    width="200" height="200"><img>
+
+
+
 <p>  
      Hi, my name is Estella Quy <strong> (I usually go by Stella) </strong> and I am an innovation society and technology major with a concentration in information security and a minor in psychology. I am incredibly interested in how technology and data can make life more accessible for all people.  
 </p>
@@ -70,9 +76,9 @@ In addition I love animals and worked at a dog day care. During my time at Hi-BK
 </p>
     
 <hr>
-
-&copy; 2020 
-
 </body>
-
+<footer>
+<span>&copy; 2023</span>
+<span class="quote"> "If you do not have a passion about what you are pursuing, nothing else matters... find something else to pursue" - Russell Quy (My Father)</span>
+</footer>
 </html>
